Changed button padding so that they fit inline on header

--- a/app/assets/stylesheets/profile_view.css.scss
+++ b/app/assets/stylesheets/profile_view.css.scss
@@ -115,7 +115,10 @@
         bottom: 0;
         > * {
           display: inline-block;
-          margin-right: 5px;
+        }
+        .btn-new {
+          padding-left: 10px;
+          padding-right: 10px;
         }
       }
     }
