Changed all image sources to use image_tag and be placed in assets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,6 +112,6 @@
   </body>
 
   <%# hidden image which will be displayed on facebook posts if no other image present %>
-  <%= image_tag 'opengraph/logo.png', class: 'hidden-opengraph-image' %>
+  <%= image_tag '/assets/images/opengraph/logo.png', class: 'hidden-opengraph-image' %>
 </html>
 
