--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -6,7 +6,7 @@
         .row.user-activity-block
           .span3
             %h2 Read articles
-            =image_tag('http://thepngproject.s3.amazonaws.com/100_000000/noun_project_304ee32c-ebe5-46b9-bafd-5ab2e9aa00e9.png', :class => 'dashboard_icon')
+            =image_tag('/assets/images/dashboard/read_articles.png', :class => 'dashboard_icon')
           .span4.next-to-h2
             :markdown
               <p><a href="/getting-started" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Read_articles', '/getting-started']);">Getting started with career planning</a></p>
@@ -24,7 +24,7 @@
         .row.user-activity-block
           .span3
             %h2 Get career advice
-            =image_tag('http://thepngproject.s3.amazonaws.com/100_000000/noun_project_5e3a3134-428d-4232-9410-48d72a426737.png', :class => 'dashboard_icon')
+            =image_tag('/assets/images/dashboard/career_advice.png', :class => 'dashboard_icon')
           .span4.next-to-h2
             :markdown
               Book a <a href="/request-a-career-advice-session" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Get career advice', '/request-a-career-advice-session']);">career advice session</a> for one-on-one advice with one of our careers advisors. They can discuss your best options and guide you on how to choose a high impact career.
@@ -33,7 +33,7 @@
         .row.user-activity-block
           .span3
             %h2 Get a mentor
-            =image_tag('http://thepngproject.s3.amazonaws.com/100_000000/noun_project_13536573-4975-466c-b4a8-fff6fa3821b6.png', :class => 'dashboard_icon')
+            =image_tag('/assets/images/dashboard/get_mentor.png', :class => 'dashboard_icon')
           .span4.next-to-h2
             :markdown
               Ask our more experienced members for advice about specific careers:
@@ -49,7 +49,7 @@
         .row.user-activity-block
           .span3
             %h2 Become a mentor
-            =image_tag('http://thepngproject.s3.amazonaws.com/100_000000/noun_project_b423fcc4-0097-4ef8-956c-0db5242a6518.png', :class => 'dashboard_icon')
+            =image_tag('/assets/images/dashboard/become_mentor.png', :class => 'dashboard_icon')
           .span4.next-to-h2
             :markdown
               If you have experience in a career, you can have an enormous impact by helping someone else.
@@ -58,7 +58,7 @@
         .row.user-activity-block
           .span3
             %h2 Write articles
-            =image_tag('http://thepngproject.s3.amazonaws.com/100_000000/noun_project_b439ea97-9127-4f04-bf7d-638d85460729.png', :class => 'dashboard_icon')
+            =image_tag('/assets/images/dashboard/write_articles.png', :class => 'dashboard_icon')
           .span4.next-to-h2
             :markdown
               Contact [Ben Todd](mailto:ben@80000hours.org) if you'd like to write for the blog. Here's some topic ideas:
@@ -68,7 +68,7 @@
         .row.user-activity-block
           .span3
             %h2 Volunteer
-            =image_tag('http://thepngproject.s3.amazonaws.com/100_000000/noun_project_24516a2b-a862-4ff2-bafa-71a4b9efd352.png', :class => 'dashboard_icon')
+            =image_tag('/assets/images/dashboard/volunteer.png', :class => 'dashboard_icon')
           .span4.next-to-h2
             :markdown
               Check out our volunteering opportunities in <a href="/volunteer#communications" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Volunteer', '/volunteer#communications']);">communications</a>, <a href="/volunteer#research" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Volunteer', '/volunteer#research']);">research</a>, <a href="/volunteer#website" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Volunteer', '/volunteer#website']);">web design and development</a>, and <a href="/volunteer" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Volunteer', '/volunteer']);">many other roles</a>
@@ -77,7 +77,7 @@
         .row.user-activity-block
           .span3
             %h2 Track donations
-            =image_tag('http://thepngproject.s3.amazonaws.com/100_000000/noun_project_a7fabfb1-4b51-46b1-acfe-dfbf23bfbad1.png', :class => 'dashboard_icon')
+            =image_tag('/assets/images/dashboard/track_donations.png', :class => 'dashboard_icon')
           .span4.next-to-h2
             :markdown
               Track your donations <a href="/donations" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Donations tracking', '/donations']);">here</a> so that we know that our members are having impact and so we can get some friendly competition going between members.
