--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
 </div>
 </div>
 
-<div class="span3"><a href="/about-us"><img alt="career advice speech bubble" src="/assets/images/front_page/advice_bubble2.jpg" style="padding-top:6em;" width="560"></a></div>
+<div class="span3"><a href="/about-us"><%= image_tag("/assets/images/front_page/advice_bubble2.jpg", width: "560", alt: "career advice speech bubble", style: "padding-top:6em;") %></a></div>
 
 <div class="span12">
 <div class="row"><hr></div>
@@ -36,15 +36,15 @@
 
 <div class="row">
 <div class="span4"><a href="/career-advice">
-<img alt="advice on careers that make a difference" height="48" src='/assets/icons/multibranch.svg' width="51">
+<%= image_tag('/assets/icons/multibranch.svg', alt: "advice on careers that make a difference", height: "48", width: "51") %>
 </a></div>
 
 <div class="span4"><a href="/our-community">
-<img alt="community of people making a difference" height="48" src="/assets/icons/community.svg" width="58">
+<%= image_tag("/assets/icons/community.svg", alt: "community of people making a difference", height: "48", width: "58") %>
 </a></div>
 
 <div class="span4"><a href="/">
-<img alt="mailing list about how to make the world a better place" height="48" src="/assets/icons/speech_bubble_square.svg" width="70">
+<%= image_tag("/assets/icons/speech_bubble_square.svg", alt: "mailing list about how to make the world a better place", height: "48", width: "70") %>
 </a></div>
 </div>
 
@@ -90,9 +90,9 @@
 </div>
 
 <div class="row">
-<div class="span1"><a href="http://www.ox.ac.uk/"><img alt="Oxford university logo" height="59" id="oxford_logo" src="/assets/images/front_page/university_of_oxford.png" width="59"></a></div>
+<div class="span1"><a href="http://www.ox.ac.uk/"><%= image_tag("/assets/images/front_page/university_of_oxford.png", alt: "Oxford university logo", height: "59", id: "oxford_logo", width: "59") %></a></div>
 
-<div class="span1"><a href="http://www.practicalethics.ox.ac.uk/"><img alt="Oxford University Uehiro Centre for Practical Ethics logo" height="60" id="uehir_logo" src="/assets/front_page/uehiro_logo_60x60.gif" width="60"></a></div>
+<div class="span1"><a href="http://www.practicalethics.ox.ac.uk/"><%= image_tag("/assets/front_page/uehiro_logo_60x60.gif", alt: "Oxford University Uehiro Centre for Practical Ethics logo", height: "60", id: "uehir_logo", width: "60") %></a></div>
 
 <div class="span10">
 <div class="floated-paragraph">
