--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,104 +1,106 @@
-<div class="row">
-<div class="span12">
-<div class="row">
-<div class="span8">
-<div class="fp-splash">
-<h1 id="you_want_to_make_a_difference__but_you_have_questions">You want to make a difference. <br> But you have questions.</h1>
-</div>
+<% cache do %>
+	<div class="row">
+	<div class="span12">
+	<div class="row">
+	<div class="span8">
+	<div class="fp-splash">
+	<h1 id="you_want_to_make_a_difference__but_you_have_questions">You want to make a difference. <br> But you have questions.</h1>
+	</div>
 
-<div class="row">
-<div class="span4">
-<div class="fp-splash">
-<p>Which <strong>jobs</strong> help people most? <br> Which <strong>subjects</strong> should I study?</p>
-</div>
-</div>
+	<div class="row">
+	<div class="span4">
+	<div class="fp-splash">
+	<p>Which <strong>jobs</strong> help people most? <br> Which <strong>subjects</strong> should I study?</p>
+	</div>
+	</div>
 
-<div class="span4">
-<div class="fp-splash">
-<p>Who should I <strong>volunteer</strong> for? <br> Which <strong>charities</strong> should I give to?</p>
-</div>
-</div>
+	<div class="span4">
+	<div class="fp-splash">
+	<p>Who should I <strong>volunteer</strong> for? <br> Which <strong>charities</strong> should I give to?</p>
+	</div>
+	</div>
 
-<div class="span7">
-<div class="fp-splash">
-<p>We’re here to help. At 80,000 Hours we share <strong>free, evidence-based advice</strong> on careers that make a difference.</p>
-<a class="fp-splash-find-out-more btn btn-primary btn" href="/about-us">Learn more</a></div>
-</div>
-</div>
-</div>
+	<div class="span7">
+	<div class="fp-splash">
+	<p>We’re here to help. At 80,000 Hours we share <strong>free, evidence-based advice</strong> on careers that make a difference.</p>
+	<a class="fp-splash-find-out-more btn btn-primary btn" href="/about-us">Learn more</a></div>
+	</div>
+	</div>
+	</div>
 
-<div class="span3"><a href="/about-us"><%= image_tag("/assets/images/front_page/advice_bubble2.jpg", width: "560", alt: "career advice speech bubble", style: "padding-top:6em;") %></a></div>
+	<div class="span3"><a href="/about-us"><%= image_tag("/assets/images/front_page/advice_bubble2.jpg", width: "560", alt: "career advice speech bubble", style: "padding-top:6em;") %></a></div>
 
-<div class="span12">
-<div class="row"><hr></div>
-</div>
-</div>
+	<div class="span12">
+	<div class="row"><hr></div>
+	</div>
+	</div>
 
-<div class="row">
-<div class="span4"><a href="/career-advice">
-<%= image_tag('/assets/icons/multibranch.svg', alt: "advice on careers that make a difference", height: "48", width: "51") %>
-</a></div>
+	<div class="row">
+	<div class="span4"><a href="/career-advice">
+	<%= image_tag('/assets/icons/multibranch.svg', alt: "advice on careers that make a difference", height: "48", width: "51") %>
+	</a></div>
 
-<div class="span4"><a href="/our-community">
-<%= image_tag("/assets/icons/community.svg", alt: "community of people making a difference", height: "48", width: "58") %>
-</a></div>
+	<div class="span4"><a href="/our-community">
+	<%= image_tag("/assets/icons/community.svg", alt: "community of people making a difference", height: "48", width: "58") %>
+	</a></div>
 
-<div class="span4"><a href="/">
-<%= image_tag("/assets/icons/speech_bubble_square.svg", alt: "mailing list about how to make the world a better place", height: "48", width: "70") %>
-</a></div>
-</div>
+	<div class="span4"><a href="/">
+	<%= image_tag("/assets/icons/speech_bubble_square.svg", alt: "mailing list about how to make the world a better place", height: "48", width: "70") %>
+	</a></div>
+	</div>
 
-<div class="row">
-<div class="span3">
-<div class="fp-splash">
-<h2 id="career_advice"><a href="/career-advice">Career advice</a></h2>
+	<div class="row">
+	<div class="span3">
+	<div class="fp-splash">
+	<h2 id="career_advice"><a href="/career-advice">Career advice</a></h2>
 
-<p>Most people want careers that make a difference. But it’s not easy to get started. How can you have more impact with your career? <a href="/career-advice">Learn more</a> or <a href="/request-a-career-advice-session/">book a one-on-one advice session</a>.</p>
-</div>
-</div>
+	<p>Most people want careers that make a difference. But it’s not easy to get started. How can you have more impact with your career? <a href="/career-advice">Learn more</a> or <a href="/request-a-career-advice-session/">book a one-on-one advice session</a>.</p>
+	</div>
+	</div>
 
-<div class="span1">
-<p>&nbsp;</p>
-</div>
+	<div class="span1">
+	<p>&nbsp;</p>
+	</div>
 
-<div class="span3">
-<div class="fp-splash">
-<h2 id="our_community"><a href="/our-community">Our community</a></h2>
-<p>Join our community of <%= EtkhProfile.all.size %> members who all want to use their career to make the world a better place. <a href="/join">Become a member</a>, find out more about <a href="/our-community">our community</a>, or post a question on our <a href="/discussion">discussion forum</a>.</p></div>
-</div>
+	<div class="span3">
+	<div class="fp-splash">
+	<h2 id="our_community"><a href="/our-community">Our community</a></h2>
+	<p>Join our community of <%= EtkhProfile.all.size %> members who all want to use their career to make the world a better place. <a href="/join">Become a member</a>, find out more about <a href="/our-community">our community</a>, or post a question on our <a href="/discussion">discussion forum</a>.</p></div>
+	</div>
 
-<div class="span1">
-<p>&nbsp;</p>
-</div>
+	<div class="span1">
+	<p>&nbsp;</p>
+	</div>
 
-<div class="span4">
-<div class="fp-splash">
-<h2 id="keep_in_touch"><a href="http://80000hours.us2.list-manage.com/subscribe?u=aba12f58bbe8075560abdc5b7&id=43bc1ae55c&group[1][1]=true">Keep in touch</a></h2>
-<p>Follow the latest research on our <a href='/blog'>blog</a>.</P>
+	<div class="span4">
+	<div class="fp-splash">
+	<h2 id="keep_in_touch"><a href="http://80000hours.us2.list-manage.com/subscribe?u=aba12f58bbe8075560abdc5b7&id=43bc1ae55c&group[1][1]=true">Keep in touch</a></h2>
+	<p>Follow the latest research on our <a href='/blog'>blog</a>.</P>
 
-<div class="mail-list">
-	<%= render partial: "shared/mailing_list", locals: { text: "Get updates on our latest career advice" } %>
-	<br/>
-</div>
+	<div class="mail-list">
+		<%= render partial: "shared/mailing_list", locals: { text: "Get updates on our latest career advice" } %>
+		<br/>
+	</div>
 
-<div id="mc_embed_signup"><a class="social-btn-facebook" href="http://www.facebook.com/80000Hours">Facebook</a><a class="social-btn-twitter" href="http://www.twitter.com/80000Hours">Twitter</a><a class="social-btn-reddit" href="http://reddit.com/r/EffectiveAltruism">Reddit</a><a class="social-btn-rss" href="/blog/feed.atom">RSS</a></div></div>
-</div>
-</div>
+	<div id="mc_embed_signup"><a class="social-btn-facebook" href="http://www.facebook.com/80000Hours">Facebook</a><a class="social-btn-twitter" href="http://www.twitter.com/80000Hours">Twitter</a><a class="social-btn-reddit" href="http://reddit.com/r/EffectiveAltruism">Reddit</a><a class="social-btn-rss" href="/blog/feed.atom">RSS</a></div></div>
+	</div>
+	</div>
 
-<div class="span12">
-<div class="row"><hr></div>
-</div>
+	<div class="span12">
+	<div class="row"><hr></div>
+	</div>
 
-<div class="row">
-<div class="span1"><a href="http://www.ox.ac.uk/"><%= image_tag("/assets/images/front_page/university_of_oxford.png", alt: "Oxford university logo", height: "59", id: "oxford_logo", width: "59") %></a></div>
+	<div class="row">
+	<div class="span1"><a href="http://www.ox.ac.uk/"><%= image_tag("/assets/images/front_page/university_of_oxford.png", alt: "Oxford university logo", height: "59", id: "oxford_logo", width: "59") %></a></div>
 
-<div class="span1"><a href="http://www.practicalethics.ox.ac.uk/"><%= image_tag("/assets/front_page/uehiro_logo_60x60.gif", alt: "Oxford University Uehiro Centre for Practical Ethics logo", height: "60", id: "uehir_logo", width: "60") %></a></div>
+	<div class="span1"><a href="http://www.practicalethics.ox.ac.uk/"><%= image_tag("/assets/front_page/uehiro_logo_60x60.gif", alt: "Oxford University Uehiro Centre for Practical Ethics logo", height: "60", id: "uehir_logo", width: "60") %></a></div>
 
-<div class="span10">
-<div class="floated-paragraph">
-<p>Our research is done with academics at the <strong>University of Oxford</strong> and 80,000 Hours is affiliated with the <strong>University of Oxford Uehiro Centre for Practical Ethics</strong>.</p>
-</div>
-</div>
-</div>
-<hr></div>
-</div>
+	<div class="span10">
+	<div class="floated-paragraph">
+	<p>Our research is done with academics at the <strong>University of Oxford</strong> and 80,000 Hours is affiliated with the <strong>University of Oxford Uehiro Centre for Practical Ethics</strong>.</p>
+	</div>
+	</div>
+	</div>
+	<hr></div>
+	</div>
+<% end %>
