--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,32 +1,31 @@
-.row
-  .span12
-    = render :partial => 'admin_box'
-.row
-  - if @page.sidebar?
-    .span7
-      %div{ :class => @page.show_box ? 'box' : nil }
-        = markdown @page.body
-    .span1
-      &nbsp;
-      
-  -else
+- cache do
+  .row
     .span12
-      = markdown @page.body
-    
-  - if @page.sidebar?
-    .span4
-      .box.sidebar.page-sidebar
-        - top_level = @page.root
-        %ul.nav.nav-pills.nav-stacked
-          %li.heading
-            = top_level.get_menu_link
+      = render :partial => 'admin_box'
+  .row
+    - if @page.sidebar?
+      .span7
+        %div{ :class => @page.show_box ? 'box' : nil }
+          = markdown @page.body
+      .span1
+        &nbsp;
+        
+    -else
+      .span12
+        = markdown @page.body
+      
+    - if @page.sidebar?
+      .span4
+        .box.sidebar.page-sidebar
+          - top_level = @page.root
+          %ul.nav.nav-pills.nav-stacked
+            %li.heading
+              = top_level.get_menu_link
 
-          - top_level.children.display_in_menu.each do |c|
-            - if c == @page
-              %li.active
-                = c.get_menu_link
-            - else
-              %li
-                = c.get_menu_link
-
-
+            - top_level.children.display_in_menu.each do |c|
+              - if c == @page
+                %li.active
+                  = c.get_menu_link
+              - else
+                %li
+                  = c.get_menu_link
