--- a/app/assets/stylesheets/donations.css.scss
+++ b/app/assets/stylesheets/donations.css.scss
@@ -5,3 +5,28 @@
     float: right;
   }
 }
+
+.donation-form {
+	#tracking {
+    margin-bottom: 25px;
+    #title { margin-bottom: 0; }
+    #parenthesis { margin-bottom: 5px; }
+
+    .radio-options {
+      margin-left: 30px;
+      .radio-option {
+        input { display: inline-block;
+          vertical-align: middle;
+          float: left;
+        }
+        .text {
+          display: inline-block;
+          width: 650px;
+          margin-left: 10px;
+          text-align: left;
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
