Added google analytics event tracking back in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,8 @@
 
     <%# display Atom feed link %>
     <%= auto_discovery_link_tag(:atom, "http://80000hours.org/blog/feed.atom") %>
+
+    <%= render :partial => "/shared/google_analytics" %>
   </head>
 
   <body>
