--- a/app/views/etkh_profiles/_profile_teaser.html.haml
+++ b/app/views/etkh_profiles/_profile_teaser.html.haml
@@ -6,12 +6,12 @@
   .row-fluid
     .span2
       .avatar
-        = link_to (image_tag user.avatar(:medium)), etkh_profile_path(user)
+        = link_to image_tag(user.avatar(:medium)), etkh_profile_path(user), :onClick => "_gaq.push(['_trackEvent', 'Members-page', 'Profile-link', '#{user.slug}'])"
     
     .span10
       .heading
         .name
-          = link_to user.name, etkh_profile_path(user)
+          = link_to user.name, etkh_profile_path(user), :onClick => "_gaq.push(['_trackEvent', 'Members-page', 'Profile-link', '#{user.slug}'])"
         - if !user.location.nil?
           .location
             %p= user.location
