--- a/app/views/etkh_profiles/_profile_condensed_2.html.haml
+++ b/app/views/etkh_profiles/_profile_condensed_2.html.haml
@@ -3,7 +3,7 @@
 - user = profile.user
 .eighty-thousand-hours-profile-condensed-2{ id: "#{user.id}" }
   .avatar
-    = link_to image_tag(user.avatar.url(:small)), "/members/#{user.slug}", onclick: "_gaq.push(['_trackEvent', 'Profile_page', 'Profile_link', '/#{user.slug}'])", class: "profile-link"
+    = link_to image_tag(user.avatar.url(:small)), "/members/#{user.slug}", onclick: "_gaq.push(['_trackEvent', 'Profile-page', 'Profile-link', '/#{user.slug}'])", class: "profile-link"
   .body
     .name
       = link_to user.name, "/members/#{user.slug}", onclick: "_gaq.push(['_trackEvent', 'Profile-page', 'Profile-link', '/#{user.slug}'])", class: "profile-link"
